--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,18 @@ name = "night"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Left-to-right stack-based language interpreter"
+repository = "https://github.com/ZippyMagician/Night"
+readme = "README.md"
+
+categories = [ "parser", "language", "stack-based" ]
+keywords = [ "parser", "language" ]
+
+[[bin]]
+name = "night"
+path = "src/main.rs"
 
 [dependencies]
 phf = { version = "0.11.2", features = ["macros"] }
+# clap = "2.33.3"
+# rand = "0.8.3
